# leptos_ssg

./: .editorconfig  .gitignore  Cargo.toml  package-lock.json  package.json  playwright.config.ts  readme.md
.github/workflows/: ci.yml  example_site.yml  opengraph.yml  playwright.yml
contrib/: nginx-example.conf
e2e/: content.spec.ts  homepage.spec.ts  image-grid.spec.ts
example/: Cargo.toml  readme.md
example/content/: 2025-07-01-hello-world.md  2025-07-13-demo.md
example/content/2025-07-14-image-grid/: index.md
example/src/: main.rs
opengraph/: Cargo.toml  playwright.config.ts
opengraph/e2e/: opengraph.spec.ts
opengraph/src/: lib.rs
src/: config.rs  content.rs  feed.rs  html.rs  lib.rs  main.rs  pages.rs  post_id.rs
src/content/: content_id.rs  metadata.rs
src/html/: icons.rs
