[package]
name = "leptos_ssg"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
pulldown-cmark = "0.13"
jiff = "0.2"
slug = "0.1"
leptos = { version = "0.8", features = ["ssr"] }
tailwind_fuse = { version = "0.3", features = ["variant"] }
thiserror = "2"
minify-html = "0.16"
tl = "0.7"
infer = "0.19"
atom_syndication = "0.12"
chrono = "0.4" # TODO: make atom_syndication work with jiff + remvoe chrono
uuid = { version = "1", features = ["v5"] }
